# WordList

./: .gitignore  CMakeLists.txt  README.md
cli/: main.cpp
combine/: CMakeLists.txt
combine/our_core/: test.bat
core/: core.h
data/: batch_file.sh  test01.txt  test02.txt  test03.txt  test04.txt  test05.txt  test06.txt  test08.txt  test09.txt  test12.txt  test13.txt  test14.txt  test16.txt  test19.txt  test20.txt  test21.txt  test22.txt  test23.txt  test29.txt  test30.txt
gui/: CMakeLists.txt  main.cpp  view.cpp  view.h
guibin/: README.md
src/: CMakeLists.txt  cli.cpp  cli.h  core.cpp  core.h  error.h  main.cpp  main.h  utils.cpp  utils.h
test/: CMakeLists.txt  core_test.cpp  exc_test.cpp  main.cpp  test.cpp  test.h
test/cases/: README.md
test/cases/core_test/: no_answer.txt  test07.txt  test10.txt  test11.txt  test15.txt  test17.txt  test18.txt  test19.txt  test21.txt  test24.txt  test25.txt  test26.txt  test27.txt  test28.txt  test29.txt  test30.txt  test_of_test.txt
test/cases/exc_test/: a_two_self_ring.in  a_two_self_ring.txt  b_ring.in  b_ring.txt  c_result_too_long_1.txt  c_result_too_long_2.in  c_result_too_long_2.txt  d_flag_not_recognized.txt  e_basic_flag_not_exist.txt  f_basic_flag_conflict.txt  g_flagN_conflict.txt  h_file_name_not_exist.txt  i_char_not_exist.txt  j_char_not_recognized.txt  k_arg_exceed.txt  l_file_not_exist.txt  m_file_cant_open.txt
tools/: checker.py  config.json  generator.py  test.py
